force-app/main/default/objects/SiebelRdo__x/fields/X_P0_OF_DUO__c.field-meta.xml
<CustomField>
    <fullName>X_P0_OF_DUO__c</fullName>
    <description>X_P0_OF_DUO</description>
    <externalDeveloperName>X_P0_OF_DUO</externalDeveloperName>
    <label>P0 Offerta Duo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>