force-app/main/default/objects/SiebelRdo__x/fields/X_P0F1__c.field-meta.xml
<CustomField>
    <fullName>X_P0F1__c</fullName>
    <description>X_P0F1</description>
    <externalDeveloperName>X_P0F1</externalDeveloperName>
    <label>p0f1 (€/MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>