force-app/main/default/objects/SiebelRdo__x/fields/X_P0F2__c.field-meta.xml
<CustomField>
    <fullName>X_P0F2__c</fullName>
    <description>X_P0F2</description>
    <externalDeveloperName>X_P0F2</externalDeveloperName>
    <label>p0f2 (€/MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>