force-app/main/default/objects/SiebelRdo__x/fields/X_P0F2P__c.field-meta.xml
<CustomField>
    <fullName>X_P0F2P__c</fullName>
    <description>X_P0F2P</description>
    <externalDeveloperName>X_P0F2P</externalDeveloperName>
    <label>p0f2Fix (€/MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>