force-app/main/default/objects/SiebelRdo__x/fields/X_P0F3__c.field-meta.xml
<CustomField>
    <fullName>X_P0F3__c</fullName>
    <description>X_P0F3</description>
    <externalDeveloperName>X_P0F3</externalDeveloperName>
    <label>p0f3 (€/MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>