force-app/main/default/objects/SiebelRdo__x/fields/X_PAGA_DEP__c.field-meta.xml
<CustomField>
    <fullName>X_PAGA_DEP__c</fullName>
    <description>X_PAGA_DEP</description>
    <externalDeveloperName>X_PAGA_DEP</externalDeveloperName>
    <label>Paga Depurazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>