force-app/main/default/objects/SiebelRdo__x/fields/X_PCG_COD_REMI__c.field-meta.xml
<CustomField>
    <fullName>X_PCG_COD_REMI__c</fullName>
    <description>X_PCG_COD_REMI</description>
    <externalDeveloperName>X_PCG_COD_REMI</externalDeveloperName>
    <label>Codice Remi PreCheck</label>
    <length>100</length>
    <type>Text</type>
</CustomField>