force-app/main/default/objects/SiebelRdo__x/fields/X_PER_CONN__c.field-meta.xml
<CustomField>
    <fullName>X_PER_CONN__c</fullName>
    <description>X_PER_CONN</description>
    <externalDeveloperName>X_PER_CONN</externalDeveloperName>
    <label>Periodo Connessione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>