force-app/main/default/objects/SiebelRdo__x/fields/X_PERCENTUALE_PREZZO_FISSO__c.field-meta.xml
<CustomField>
    <fullName>X_PERCENTUALE_PREZZO_FISSO__c</fullName>
    <description>X_PERCENTUALE_PREZZO_FISSO</description>
    <externalDeveloperName>X_PERCENTUALE_PREZZO_FISSO</externalDeveloperName>
    <label>Percentuale Prezzo Fisso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>