force-app/main/default/objects/SiebelRdo__x/fields/X_PERIODO_INDICE_TTF_E__c.field-meta.xml
<CustomField>
    <fullName>X_PERIODO_INDICE_TTF_E__c</fullName>
    <description>X_PERIODO_INDICE_TTF_E</description>
    <externalDeveloperName>X_PERIODO_INDICE_TTF_E</externalDeveloperName>
    <label>Periodo Indice TTF E</label>
    <type>DateTime</type>
</CustomField>