force-app/main/default/objects/SiebelRdo__x/fields/X_POT_IMPG__c.field-meta.xml
<CustomField>
    <fullName>X_POT_IMPG__c</fullName>
    <description>X_POT_IMPG</description>
    <externalDeveloperName>X_POT_IMPG</externalDeveloperName>
    <label>Potenza Impegnata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>