force-app/main/default/objects/SiebelRdo__x/fields/X_POT_MAX__c.field-meta.xml
<CustomField>
    <fullName>X_POT_MAX__c</fullName>
    <description>X_POT_MAX</description>
    <externalDeveloperName>X_POT_MAX</externalDeveloperName>
    <label>Potenza massima</label>
    <length>30</length>
    <type>Text</type>
</CustomField>