force-app/main/default/objects/SiebelRdo__x/fields/X_POT_TO_UTIL__c.field-meta.xml
<CustomField>
    <fullName>X_POT_TO_UTIL__c</fullName>
    <description>X_POT_TO_UTIL</description>
    <externalDeveloperName>X_POT_TO_UTIL</externalDeveloperName>
    <label>Pot Tot Util</label>
    <length>30</length>
    <type>Text</type>
</CustomField>