force-app/main/default/objects/SiebelRdo__x/fields/X_PREF_OFF_COMM__c.field-meta.xml
<CustomField>
    <fullName>X_PREF_OFF_COMM__c</fullName>
    <description>X_PREF_OFF_COMM</description>
    <externalDeveloperName>X_PREF_OFF_COMM</externalDeveloperName>
    <label>PREF Offerta Commerciale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>