force-app/main/default/objects/SiebelRdo__x/fields/X_PREMIO_RID_FIX__c.field-meta.xml
<CustomField>
    <fullName>X_PREMIO_RID_FIX__c</fullName>
    <description>X_PREMIO_RID_FIX</description>
    <externalDeveloperName>X_PREMIO_RID_FIX</externalDeveloperName>
    <label>Premio RID FIX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>