force-app/main/default/objects/SiebelRdo__x/fields/X_PRESENZA_CLI_PER_SDD__c.field-meta.xml
<CustomField>
    <fullName>X_PRESENZA_CLI_PER_SDD__c</fullName>
    <description>X_PRESENZA_CLI_PER_SDD</description>
    <externalDeveloperName>X_PRESENZA_CLI_PER_SDD</externalDeveloperName>
    <label>Presenza Cli Nuovi Proc SDD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>