force-app/main/default/objects/SiebelRdo__x/fields/X_PRESENZA_CMOR__c.field-meta.xml
<CustomField>
    <fullName>X_PRESENZA_CMOR__c</fullName>
    <description>X_PRESENZA_CMOR</description>
    <externalDeveloperName>X_PRESENZA_CMOR</externalDeveloperName>
    <label>Presenza CMOR</label>
    <length>2</length>
    <type>Text</type>
</CustomField>