force-app/main/default/objects/SiebelRdo__x/fields/X_PRESSIONE_FORNITURA__c.field-meta.xml
<CustomField>
    <fullName>X_PRESSIONE_FORNITURA__c</fullName>
    <description>X_PRESSIONE_FORNITURA</description>
    <externalDeveloperName>X_PRESSIONE_FORNITURA</externalDeveloperName>
    <label>Pressione Fornitura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>