force-app/main/default/objects/SiebelRdo__x/fields/X_PREVENTIVO_RAPIDO__c.field-meta.xml
<CustomField>
    <fullName>X_PREVENTIVO_RAPIDO__c</fullName>
    <description>X_PREVENTIVO_RAPIDO</description>
    <externalDeveloperName>X_PREVENTIVO_RAPIDO</externalDeveloperName>
    <label>Preventivo Rapido</label>
    <length>30</length>
    <type>Text</type>
</CustomField>