force-app/main/default/objects/SiebelRdo__x/fields/X_PREZZO_GG__c.field-meta.xml
<CustomField>
    <fullName>X_PREZZO_GG__c</fullName>
    <description>X_PREZZO_GG</description>
    <externalDeveloperName>X_PREZZO_GG</externalDeveloperName>
    <label>Prezzo Giornaliero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>