force-app/main/default/objects/SiebelRdo__x/fields/X_PRZ_PCV_SAP__c.field-meta.xml
<CustomField>
    <fullName>X_PRZ_PCV_SAP__c</fullName>
    <description>X_PRZ_PCV_SAP</description>
    <externalDeveloperName>X_PRZ_PCV_SAP</externalDeveloperName>
    <label>Prz PCV SAP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>