force-app/main/default/objects/SiebelRdo__x/fields/X_PRZ_QVD_FIX_GG__c.field-meta.xml
<CustomField>
    <fullName>X_PRZ_QVD_FIX_GG__c</fullName>
    <description>X_PRZ_QVD_FIX_GG</description>
    <externalDeveloperName>X_PRZ_QVD_FIX_GG</externalDeveloperName>
    <label>Prz Qvd Fix GG</label>
    <length>50</length>
    <type>Text</type>
</CustomField>