force-app/main/default/objects/SiebelRdo__x/fields/X_PUNTO_DISPACCIAMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_PUNTO_DISPACCIAMENTO__c</fullName>
    <description>X_PUNTO_DISPACCIAMENTO</description>
    <externalDeveloperName>X_PUNTO_DISPACCIAMENTO</externalDeveloperName>
    <label>Punto Dispacciamento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>