force-app/main/default/objects/SiebelRdo__x/fields/X_QT__c.field-meta.xml
<CustomField>
    <fullName>X_QT__c</fullName>
    <description>X_QT</description>
    <externalDeveloperName>X_QT</externalDeveloperName>
    <label>Qt</label>
    <length>50</length>
    <type>Text</type>
</CustomField>