force-app/main/default/objects/SiebelRdo__x/fields/X_QVD__c.field-meta.xml
<CustomField>
    <fullName>X_QVD__c</fullName>
    <description>X_QVD</description>
    <externalDeveloperName>X_QVD</externalDeveloperName>
    <label>QVD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>