force-app/main/default/objects/SiebelRdo__x/fields/X_RAG_SOC_GEST_CAL__c.field-meta.xml
<CustomField>
    <fullName>X_RAG_SOC_GEST_CAL__c</fullName>
    <description>X_RAG_SOC_GEST_CAL</description>
    <externalDeveloperName>X_RAG_SOC_GEST_CAL</externalDeveloperName>
    <label>Ragione Sociale Gestore Calore</label>
    <length>100</length>
    <type>Text</type>
</CustomField>