force-app/main/default/objects/SiebelRdo__x/fields/X_RAG_SOC_PREC_INT__c.field-meta.xml
<CustomField>
    <fullName>X_RAG_SOC_PREC_INT__c</fullName>
    <description>X_RAG_SOC_PREC_INT</description>
    <externalDeveloperName>X_RAG_SOC_PREC_INT</externalDeveloperName>
    <label>Rag Sociale Prec Intestatario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>