force-app/main/default/objects/SiebelRdo__x/fields/X_RATE_ANNUE__c.field-meta.xml
<CustomField>
    <fullName>X_RATE_ANNUE__c</fullName>
    <description>X_RATE_ANNUE</description>
    <externalDeveloperName>X_RATE_ANNUE</externalDeveloperName>
    <label>Rate Annue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>