force-app/main/default/objects/SiebelRdo__x/fields/X_RAVVED_EXTRACTED_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_RAVVED_EXTRACTED_TARI__c</fullName>
    <description>X_RAVVED_EXTRACTED_TARI</description>
    <externalDeveloperName>X_RAVVED_EXTRACTED_TARI</externalDeveloperName>
    <label>X_RAVVED_EXTRACTED_TARI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>