force-app/main/default/objects/SiebelRdo__x/fields/X_RES_IND_FORNITURA__c.field-meta.xml
<CustomField>
    <fullName>X_RES_IND_FORNITURA__c</fullName>
    <description>X_RES_IND_FORNITURA</description>
    <externalDeveloperName>X_RES_IND_FORNITURA</externalDeveloperName>
    <label>Residente Ind Fornitura</label>
    <length>2</length>
    <type>Text</type>
</CustomField>