force-app/main/default/objects/SiebelRdo__x/fields/X_RESOCONTO__c.field-meta.xml
<CustomField>
    <fullName>X_RESOCONTO__c</fullName>
    <description>X_RESOCONTO</description>
    <externalDeveloperName>X_RESOCONTO</externalDeveloperName>
    <label>Resoconto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>