force-app/main/default/objects/SiebelRdo__x/fields/X_REVOCA_TIMOE__c.field-meta.xml
<CustomField>
    <fullName>X_REVOCA_TIMOE__c</fullName>
    <description>X_REVOCA_TIMOE</description>
    <externalDeveloperName>X_REVOCA_TIMOE</externalDeveloperName>
    <label>Revoca TIMOE</label>
    <length>2</length>
    <type>Text</type>
</CustomField>