force-app/main/default/objects/SiebelRdo__x/fields/X_RIF_RESOCONTO__c.field-meta.xml
<CustomField>
    <fullName>X_RIF_RESOCONTO__c</fullName>
    <description>X_RIF_RESOCONTO</description>
    <externalDeveloperName>X_RIF_RESOCONTO</externalDeveloperName>
    <label>Riferimento Resoconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>