force-app/main/default/objects/SiebelRdo__x/fields/X_RILEV_CONT_SERV__c.field-meta.xml
<CustomField>
    <fullName>X_RILEV_CONT_SERV__c</fullName>
    <description>X_RILEV_CONT_SERV</description>
    <externalDeveloperName>X_RILEV_CONT_SERV</externalDeveloperName>
    <label>Rilevanza cli.continuità serv</label>
    <length>30</length>
    <type>Text</type>
</CustomField>