force-app/main/default/objects/SiebelRdo__x/fields/X_RIMOZ_CONV__c.field-meta.xml
<CustomField>
    <fullName>X_RIMOZ_CONV__c</fullName>
    <description>X_RIMOZ_CONV</description>
    <externalDeveloperName>X_RIMOZ_CONV</externalDeveloperName>
    <label>Rimozione Convertitore</label>
    <length>2</length>
    <type>Text</type>
</CustomField>