force-app/main/default/objects/SiebelRdo__x/fields/X_RITIRA_DOTAZIONI__c.field-meta.xml
<CustomField>
    <fullName>X_RITIRA_DOTAZIONI__c</fullName>
    <description>X_RITIRA_DOTAZIONI</description>
    <externalDeveloperName>X_RITIRA_DOTAZIONI</externalDeveloperName>
    <label>Ritira Dotazioni</label>
    <length>30</length>
    <type>Text</type>
</CustomField>