force-app/main/default/objects/SiebelRdo__x/fields/X_SBILANCIAMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_SBILANCIAMENTO__c</fullName>
    <description>X_SBILANCIAMENTO</description>
    <externalDeveloperName>X_SBILANCIAMENTO</externalDeveloperName>
    <label>Sbilanciamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>