force-app/main/default/objects/SiebelRdo__x/fields/X_SBLOCCO_PREADEMPIMENTO__c.field-meta.xml
<CustomField>
    <fullName>X_SBLOCCO_PREADEMPIMENTO__c</fullName>
    <description>X_SBLOCCO_PREADEMPIMENTO</description>
    <externalDeveloperName>X_SBLOCCO_PREADEMPIMENTO</externalDeveloperName>
    <label>Sblocco Preadempimento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>