force-app/main/default/objects/SiebelRdo__x/fields/X_SCONTO_BASE_FIX__c.field-meta.xml
<CustomField>
    <fullName>X_SCONTO_BASE_FIX__c</fullName>
    <description>X_SCONTO_BASE_FIX</description>
    <externalDeveloperName>X_SCONTO_BASE_FIX</externalDeveloperName>
    <label>Sconto Base Fix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>