force-app/main/default/objects/SiebelRdo__x/fields/X_SCONTO_CONSIP__c.field-meta.xml
<CustomField>
    <fullName>X_SCONTO_CONSIP__c</fullName>
    <description>X_SCONTO_CONSIP</description>
    <externalDeveloperName>X_SCONTO_CONSIP</externalDeveloperName>
    <label>Sconto CONSIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>