force-app/main/default/objects/SiebelRdo__x/fields/X_SOCIETA_EROG__c.field-meta.xml
<CustomField>
    <fullName>X_SOCIETA_EROG__c</fullName>
    <description>X_SOCIETA_EROG</description>
    <externalDeveloperName>X_SOCIETA_EROG</externalDeveloperName>
    <label>Societa Erogatrice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>