force-app/main/default/objects/SiebelRdo__x/fields/X_SOCIETA_VEND__c.field-meta.xml
<CustomField>
    <fullName>X_SOCIETA_VEND__c</fullName>
    <description>X_SOCIETA_VEND</description>
    <externalDeveloperName>X_SOCIETA_VEND</externalDeveloperName>
    <label>Società Vendita Pick</label>
    <length>30</length>
    <type>Text</type>
</CustomField>