force-app/main/default/objects/SiebelRdo__x/fields/X_SOCIETA_VEND_COD__c.field-meta.xml
<CustomField>
    <fullName>X_SOCIETA_VEND_COD__c</fullName>
    <description>X_SOCIETA_VEND_COD</description>
    <externalDeveloperName>X_SOCIETA_VEND_COD</externalDeveloperName>
    <label>Codice Societa Vendita</label>
    <length>30</length>
    <type>Text</type>
</CustomField>