force-app/main/default/objects/SiebelRdo__x/fields/X_SOLLEVAMENTO_PERSONE__c.field-meta.xml
<CustomField>
    <fullName>X_SOLLEVAMENTO_PERSONE__c</fullName>
    <description>X_SOLLEVAMENTO_PERSONE</description>
    <externalDeveloperName>X_SOLLEVAMENTO_PERSONE</externalDeveloperName>
    <label>Sollevamento Persone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>