force-app/main/default/objects/SiebelRdo__x/fields/X_SOST_MIS__c.field-meta.xml
<CustomField>
    <fullName>X_SOST_MIS__c</fullName>
    <description>X_SOST_MIS</description>
    <externalDeveloperName>X_SOST_MIS</externalDeveloperName>
    <label>Sost Mis</label>
    <length>30</length>
    <type>Text</type>
</CustomField>