force-app/main/default/objects/SiebelRdo__x/fields/X_SOTTOSERVIZIO__c.field-meta.xml
<CustomField>
    <fullName>X_SOTTOSERVIZIO__c</fullName>
    <description>X_SOTTOSERVIZIO</description>
    <externalDeveloperName>X_SOTTOSERVIZIO</externalDeveloperName>
    <label>SottoServizio</label>
    <length>30</length>
    <type>Text</type>
</CustomField>