force-app/main/default/objects/SiebelRdo__x/fields/X_SOTTOTIPO_RDS__c.field-meta.xml
<CustomField>
    <fullName>X_SOTTOTIPO_RDS__c</fullName>
    <description>X_SOTTOTIPO_RDS</description>
    <externalDeveloperName>X_SOTTOTIPO_RDS</externalDeveloperName>
    <label>Sottotipo RDS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>