force-app/main/default/objects/SiebelRdo__x/fields/X_SPREAD_F1_PUN__c.field-meta.xml
<CustomField>
    <fullName>X_SPREAD_F1_PUN__c</fullName>
    <description>X_SPREAD_F1_PUN</description>
    <externalDeveloperName>X_SPREAD_F1_PUN</externalDeveloperName>
    <label>Spread F1 PUN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>