force-app/main/default/objects/SiebelRdo__x/fields/X_SPREAD_INVERNO__c.field-meta.xml
<CustomField>
    <fullName>X_SPREAD_INVERNO__c</fullName>
    <description>X_SPREAD_INVERNO</description>
    <externalDeveloperName>X_SPREAD_INVERNO</externalDeveloperName>
    <label>Spread Inverno</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>