force-app/main/default/objects/SiebelRdo__x/fields/X_SPREAD_MONO__c.field-meta.xml
<CustomField>
    <fullName>X_SPREAD_MONO__c</fullName>
    <description>X_SPREAD_MONO</description>
    <externalDeveloperName>X_SPREAD_MONO</externalDeveloperName>
    <label>Spread Mono</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>