force-app/main/default/objects/SiebelRdo__x/fields/X_STAIR__c.field-meta.xml
<CustomField>
    <fullName>X_STAIR__c</fullName>
    <description>X_STAIR</description>
    <externalDeveloperName>X_STAIR</externalDeveloperName>
    <label>Scala [Spedizione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>