force-app/main/default/objects/SiebelRdo__x/fields/X_STATO_DEL_40__c.field-meta.xml
<CustomField>
    <fullName>X_STATO_DEL_40__c</fullName>
    <description>X_STATO_DEL_40</description>
    <externalDeveloperName>X_STATO_DEL_40</externalDeveloperName>
    <label>Stato DL40</label>
    <length>50</length>
    <type>Text</type>
</CustomField>