force-app/main/default/objects/SiebelRdo__x/fields/X_SUPERFICIE_MQ__c.field-meta.xml
<CustomField>
    <fullName>X_SUPERFICIE_MQ__c</fullName>
    <description>X_SUPERFICIE_MQ</description>
    <externalDeveloperName>X_SUPERFICIE_MQ</externalDeveloperName>
    <label>Superficie MQ Admin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>