force-app/main/default/objects/SiebelRdo__x/fields/X_SWIT_START_DT__c.field-meta.xml
<CustomField>
    <fullName>X_SWIT_START_DT__c</fullName>
    <description>X_SWIT_START_DT</description>
    <externalDeveloperName>X_SWIT_START_DT</externalDeveloperName>
    <label>Data Inizio Switch</label>
    <type>DateTime</type>
</CustomField>