force-app/main/default/objects/SiebelRdo__x/fields/X_TAG_BIDONE_5__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_BIDONE_5__c</fullName>
    <description>X_TAG_BIDONE_5</description>
    <externalDeveloperName>X_TAG_BIDONE_5</externalDeveloperName>
    <label>Bidone TCP 5</label>
    <length>30</length>
    <type>Text</type>
</CustomField>