force-app/main/default/objects/SiebelRdo__x/fields/X_TAG_BIDONE_6__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_BIDONE_6__c</fullName>
    <description>X_TAG_BIDONE_6</description>
    <externalDeveloperName>X_TAG_BIDONE_6</externalDeveloperName>
    <label>Bidone TCP 6</label>
    <length>30</length>
    <type>Text</type>
</CustomField>