force-app/main/default/objects/SiebelRdo__x/fields/X_TAG_BIDONE_RIT_4__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_BIDONE_RIT_4__c</fullName>
    <description>X_TAG_BIDONE_RIT_4</description>
    <externalDeveloperName>X_TAG_BIDONE_RIT_4</externalDeveloperName>
    <label>Bidone Ritirato 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>