force-app/main/default/objects/SiebelRdo__x/fields/X_TAG_SACCO_2__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_SACCO_2__c</fullName>
    <description>X_TAG_SACCO_2</description>
    <externalDeveloperName>X_TAG_SACCO_2</externalDeveloperName>
    <label>Sacco TCP 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>