force-app/main/default/objects/SiebelRdo__x/fields/X_TAG_SACCO_RIT_3__c.field-meta.xml
<CustomField>
    <fullName>X_TAG_SACCO_RIT_3__c</fullName>
    <description>X_TAG_SACCO_RIT_3</description>
    <externalDeveloperName>X_TAG_SACCO_RIT_3</externalDeveloperName>
    <label>Sacco Ritirato 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>