force-app/main/default/objects/SiebelRdo__x/fields/X_TARIF_FORFAIT__c.field-meta.xml
<CustomField>
    <fullName>X_TARIF_FORFAIT__c</fullName>
    <description>X_TARIF_FORFAIT</description>
    <externalDeveloperName>X_TARIF_FORFAIT</externalDeveloperName>
    <label>Tariffa Forfettaria</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>