force-app/main/default/objects/SiebelRdo__x/fields/X_TARIFFA_FORFAIT_EURO__c.field-meta.xml
<CustomField>
    <fullName>X_TARIFFA_FORFAIT_EURO__c</fullName>
    <description>X_TARIFFA_FORFAIT_EURO</description>
    <externalDeveloperName>X_TARIFFA_FORFAIT_EURO</externalDeveloperName>
    <label>Tariffa Forfait Euro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>