force-app/main/default/objects/SiebelRdo__x/fields/X_TEL_DA_COM__c.field-meta.xml
<CustomField>
    <fullName>X_TEL_DA_COM__c</fullName>
    <description>X_TEL_DA_COM</description>
    <externalDeveloperName>X_TEL_DA_COM</externalDeveloperName>
    <label>Tel da Comunicare</label>
    <length>20</length>
    <type>Text</type>
</CustomField>