force-app/main/default/objects/SiebelRdo__x/fields/X_TEL_PESSE__c.field-meta.xml
<CustomField>
    <fullName>X_TEL_PESSE__c</fullName>
    <description>X_TEL_PESSE</description>
    <externalDeveloperName>X_TEL_PESSE</externalDeveloperName>
    <label>Tel Pesse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>