force-app/main/default/objects/SiebelRdo__x/fields/X_TELEGESTITO_PER_SDD__c.field-meta.xml
<CustomField>
    <fullName>X_TELEGESTITO_PER_SDD__c</fullName>
    <description>X_TELEGESTITO_PER_SDD</description>
    <externalDeveloperName>X_TELEGESTITO_PER_SDD</externalDeveloperName>
    <label>Telegestito Nuovi Proc SDD</label>
    <length>30</length>
    <type>Text</type>
</CustomField>