force-app/main/default/objects/SiebelRdo__x/fields/X_TEMP_MAX_ESEC_DA_CONF__c.field-meta.xml
<CustomField>
    <fullName>X_TEMP_MAX_ESEC_DA_CONF__c</fullName>
    <description>X_TEMP_MAX_ESEC_DA_CONF</description>
    <externalDeveloperName>X_TEMP_MAX_ESEC_DA_CONF</externalDeveloperName>
    <label>Tempo Max Esec Da Conferma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>