force-app/main/default/objects/SiebelRdo__x/fields/X_TEMP_PREDETERM__c.field-meta.xml
<CustomField>
    <fullName>X_TEMP_PREDETERM__c</fullName>
    <description>X_TEMP_PREDETERM</description>
    <externalDeveloperName>X_TEMP_PREDETERM</externalDeveloperName>
    <label>Tempo Predeterminabilita</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>