force-app/main/default/objects/SiebelRdo__x/fields/X_TEMPO_MAX_ESEC_LAV__c.field-meta.xml
<CustomField>
    <fullName>X_TEMPO_MAX_ESEC_LAV__c</fullName>
    <description>X_TEMPO_MAX_ESEC_LAV</description>
    <externalDeveloperName>X_TEMPO_MAX_ESEC_LAV</externalDeveloperName>
    <label>Tempo Max Esec Lavoro</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>