force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_ALLACC__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_ALLACC__c</fullName>
    <description>X_TIPO_ALLACC</description>
    <externalDeveloperName>X_TIPO_ALLACC</externalDeveloperName>
    <label>Tipo Allacciamento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>