force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_ATTIVAZIONE_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_ATTIVAZIONE_TARI__c</fullName>
    <description>X_TIPO_ATTIVAZIONE_TARI</description>
    <externalDeveloperName>X_TIPO_ATTIVAZIONE_TARI</externalDeveloperName>
    <label>TARI Tipo Attivazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>