force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_CLI_VOLTUR__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_CLI_VOLTUR__c</fullName>
    <description>X_TIPO_CLI_VOLTUR</description>
    <externalDeveloperName>X_TIPO_CLI_VOLTUR</externalDeveloperName>
    <label>Tipo Cliente Volturato</label>
    <length>50</length>
    <type>Text</type>
</CustomField>