force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_CONNESSIONE__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_CONNESSIONE__c</fullName>
    <description>X_TIPO_CONNESSIONE</description>
    <externalDeveloperName>X_TIPO_CONNESSIONE</externalDeveloperName>
    <label>Tipo Connessione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>