force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_LIST_PCV__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_LIST_PCV__c</fullName>
    <description>X_TIPO_LIST_PCV</description>
    <externalDeveloperName>X_TIPO_LIST_PCV</externalDeveloperName>
    <label>Tipo List PCV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>