force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_LIST_QVD_VAR__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_LIST_QVD_VAR__c</fullName>
    <description>X_TIPO_LIST_QVD_VAR</description>
    <externalDeveloperName>X_TIPO_LIST_QVD_VAR</externalDeveloperName>
    <label>Tipo lista QVD Var</label>
    <length>50</length>
    <type>Text</type>
</CustomField>