force-app/main/default/objects/SiebelRdo__x/fields/X_TIPO_PREVENTIVO__c.field-meta.xml
<CustomField>
    <fullName>X_TIPO_PREVENTIVO__c</fullName>
    <description>X_TIPO_PREVENTIVO</description>
    <externalDeveloperName>X_TIPO_PREVENTIVO</externalDeveloperName>
    <label>Tipo Preventivo Rapido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>