force-app/main/default/objects/SiebelRdo__x/fields/X_TIPOLOGIA_RICHIESTA_TARI__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_RICHIESTA_TARI__c</fullName>
    <description>X_TIPOLOGIA_RICHIESTA_TARI</description>
    <externalDeveloperName>X_TIPOLOGIA_RICHIESTA_TARI</externalDeveloperName>
    <label>TARI Tipologia Richiesta</label>
    <length>30</length>
    <type>Text</type>
</CustomField>