force-app/main/default/objects/SiebelRdo__x/fields/X_TIPOLOGIA_RISOLUZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_RISOLUZIONE__c</fullName>
    <description>X_TIPOLOGIA_RISOLUZIONE</description>
    <externalDeveloperName>X_TIPOLOGIA_RISOLUZIONE</externalDeveloperName>
    <label>Tipologia Risoluzione</label>
    <length>3</length>
    <type>Text</type>
</CustomField>