force-app/main/default/objects/SiebelRdo__x/fields/X_TIPOLOGIA_UTENZA__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_UTENZA__c</fullName>
    <description>X_TIPOLOGIA_UTENZA</description>
    <externalDeveloperName>X_TIPOLOGIA_UTENZA</externalDeveloperName>
    <label>Tipologia Utenza</label>
    <length>50</length>
    <type>Text</type>
</CustomField>