force-app/main/default/objects/SiebelRdo__x/fields/X_TIPOLOGIA_VARIAZIONE__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_VARIAZIONE__c</fullName>
    <description>X_TIPOLOGIA_VARIAZIONE</description>
    <externalDeveloperName>X_TIPOLOGIA_VARIAZIONE</externalDeveloperName>
    <label>Tipologia Variazione</label>
    <length>30</length>
    <type>Text</type>
</CustomField>