force-app/main/default/objects/SiebelRdo__x/fields/X_TIPOLOGIA_VOLTURA__c.field-meta.xml
<CustomField>
    <fullName>X_TIPOLOGIA_VOLTURA__c</fullName>
    <description>X_TIPOLOGIA_VOLTURA</description>
    <externalDeveloperName>X_TIPOLOGIA_VOLTURA</externalDeveloperName>
    <label>Tipologia Voltura</label>
    <length>30</length>
    <type>Text</type>
</CustomField>