force-app/main/default/objects/SiebelRdo__x/fields/X_UFFICIO_COMPETENTE__c.field-meta.xml
<CustomField>
    <fullName>X_UFFICIO_COMPETENTE__c</fullName>
    <description>X_UFFICIO_COMPETENTE</description>
    <externalDeveloperName>X_UFFICIO_COMPETENTE</externalDeveloperName>
    <label>Ufficio Competente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>