force-app/main/default/objects/SiebelRdo__x/fields/X_UN_DOM_RES__c.field-meta.xml
<CustomField>
    <fullName>X_UN_DOM_RES__c</fullName>
    <description>X_UN_DOM_RES</description>
    <externalDeveloperName>X_UN_DOM_RES</externalDeveloperName>
    <label>Unita Dom Res</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>