force-app/main/default/objects/SiebelRdo__x/fields/X_UN_NDOM__c.field-meta.xml
<CustomField>
    <fullName>X_UN_NDOM__c</fullName>
    <description>X_UN_NDOM</description>
    <externalDeveloperName>X_UN_NDOM</externalDeveloperName>
    <label>Unita Non Dom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>