force-app/main/default/objects/SiebelRdo__x/fields/X_UNITA_IMM_DOM_RES__c.field-meta.xml
<CustomField>
    <fullName>X_UNITA_IMM_DOM_RES__c</fullName>
    <description>X_UNITA_IMM_DOM_RES</description>
    <externalDeveloperName>X_UNITA_IMM_DOM_RES</externalDeveloperName>
    <label>Unita Immobiliari Domestiche Residenti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>