force-app/main/default/objects/SiebelRdo__x/fields/X_VAL_INDEX_RIF__c.field-meta.xml
<CustomField>
    <fullName>X_VAL_INDEX_RIF__c</fullName>
    <description>X_VAL_INDEX_RIF</description>
    <externalDeveloperName>X_VAL_INDEX_RIF</externalDeveloperName>
    <label>Valore indice di riferimento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>