force-app/main/default/objects/SiebelRdo__x/fields/X_VAL_K_RIF__c.field-meta.xml
<CustomField>
    <fullName>X_VAL_K_RIF__c</fullName>
    <description>X_VAL_K_RIF</description>
    <externalDeveloperName>X_VAL_K_RIF</externalDeveloperName>
    <label>val k di riferimento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>