force-app/main/default/objects/SiebelRdo__x/fields/X_VAL_SOC_VEND__c.field-meta.xml
<CustomField>
    <fullName>X_VAL_SOC_VEND__c</fullName>
    <description>X_VAL_SOC_VEND</description>
    <externalDeveloperName>X_VAL_SOC_VEND</externalDeveloperName>
    <label>Valorizzazione Societa Vendita</label>
    <length>1</length>
    <type>Text</type>
</CustomField>