force-app/main/default/objects/SiebelRdo__x/fields/X_VAS_COMP_OI_EN_ID__c.field-meta.xml
<CustomField>
    <fullName>X_VAS_COMP_OI_EN_ID__c</fullName>
    <description>X_VAS_COMP_OI_EN_ID</description>
    <externalDeveloperName>X_VAS_COMP_OI_EN_ID</externalDeveloperName>
    <label>ID OrderItem VAS composto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>