force-app/main/default/objects/SiebelRdo__x/fields/X_VASCHE_ACCUMULO__c.field-meta.xml
<CustomField>
    <fullName>X_VASCHE_ACCUMULO__c</fullName>
    <description>X_VASCHE_ACCUMULO</description>
    <externalDeveloperName>X_VASCHE_ACCUMULO</externalDeveloperName>
    <label>Vasche Accumulo</label>
    <length>2</length>
    <type>Text</type>
</CustomField>